# schnitzel-gallery

./: .build.yml  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go
.github/workflows/: docker-registry.yml  push.yaml
assets/: index.js  styles.css
src/: helpers.rs  main.rs  paths.rs
static/: index.html  index.js
templates/: index.tera
