[package]
name = "schnitzel-gallery"
version = "0.1.0"
authors = ["Mark Pashmfouroush <mark@markpash.me>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
image = "0.20.1"
dotenv = "0.13.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json", "tera_templates", "serve"]
