[package]
name = "schnitzel-gallery"
version = "0.1.0"
authors = ["Mark Pashmfouroush <mark@markpash.me>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
image = "0.22"
dotenv = "0.15"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "serve"]
